crates/kaeru/src/snapshots/kaeru__tests__render_command_buttons.snap
---
source: crates/kaeru/src/main.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
No messages yet. Type to chat.                                                  
                                                                                
                                                                                
                                                                                
 >                                                                              
                                                                                
kaeru – test-server  Connecting to test-server  [idle]                [cmd: C-p]
