crates/kaeru/src/snapshots/kaeru__tests__render_command_picker.snap
---
source: crates/kaeru/src/main.rs
expression: output
---
fuztea  Esc quits  Enter selects  Ctrl-n/p move  Ctrl-d/u page                  
┌──────────────────────────────────────────────────────────────────────────────┐
│>                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
Command                                 Description                             
create_plan                             Create an execution plan                
research_codebase                       Analyze the repository                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
2/2 matches
