crates/kaeru/src/snapshots/kaeru__tests__render_initial_state.snap
---
source: crates/kaeru/src/main.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
No messages yet. Type to chat.                                                  
                                                                                
                                                                                
                                                                                
 >                                                                              
                                                                                
kaeru – test-server  Connecting to test-server  [idle]
