crates/kaeru/src/snapshots/kaeru__tests__render_input_multiline.snap
---
source: crates/kaeru/src/main.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
No messages yet. Type to chat.                                                  
                                                                                
                                                                                
                                                                                
 > Line 1                                                                       
   Line 2                                                                       
   Line 3                                                                       
                                                                                
kaeru – test-server  Connecting to test-server  [idle]
