crates/kaeru/src/snapshots/kaeru__tests__render_mode_and_model_buttons.snap
---
source: crates/kaeru/src/main.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
No messages yet. Type to chat.                                                  
                                                                                
                                                                                
                                                                                
 >                                                                              
                                                                                
kaeru – test-server  Connecting to test-server  [idle]  [mode: Ask C-y]  [model:
