crates/kaeru/src/snapshots/kaeru__tests__render_mode_picker.snap
---
source: crates/kaeru/src/main.rs
expression: output
---
fuztea  Esc quits  Enter selects  Ctrl-n/p move  Ctrl-d/u page                  
┌──────────────────────────────────────────────────────────────────────────────┐
│>                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
Mode                                                                            
Ask                                                                             
Code                                                                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
2/2 matches
